CustomEnchant v1.1 - Added the ability to create custom enchants via the enchantments.yml file